fix: button content alignment when loading

--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -101,6 +101,7 @@
 
         .loadingInner {
             display: flex;
+            justify-content: center;
             gap: 1em;
             align-items: center;
 
